# storage/api-docs/api-docs.json
@@ -1,7 +1,15 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Authentication Boilerplate",
+        "title": "Integration Swagger in Laravel with Auth Documentation",
+        "description": "Implementation of Swagger with in Laravel",
+        "contact": {
+            "email": "admin@admin.com"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
         "version": "1.0.0"
     },
     "paths": {
